--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -6,7 +6,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 
-    <title><%= title%></title>
+    <title>
+        <%= title%>
+    </title>
     <meta name="generator" content="Bootply">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Bootstrap Clean Bootstrap 3 single column layout that works well for blog or article lists. This template features circle images, minimal narrow-style">
@@ -243,34 +245,13 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="https://www.bootply.com/" class="navbar-brand">Home</a>
-            </div>
+                        <% for(let i=0; i<nav.length; i++) { %>
+                            <a href="<%= nav[i].link%>" class="navbar-brand">
+                                <%= nav[i].title%></a>
+                        <%}%>
+                    </ul>
+                </div>
             <nav class="collapse navbar-collapse" role="navigation">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="https://www.bootply.com/render/pVkM36Biz1#">Category</a>
-                    </li>
-                    <li>
-                        <a href="https://www.bootply.com/render/pVkM36Biz1#">Category</a>
-                    </li>
-                    <li>
-                        <a href="https://www.bootply.com/render/pVkM36Biz1#">Category</a>
-                    </li>
-                    <li>
-                        <a href="https://www.bootply.com/render/pVkM36Biz1#">Category</a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-right navbar-nav">
-                    <li class="dropdown">
-                        <a href="https://www.bootply.com/render/pVkM36Biz1#" class="dropdown-toggle" data-toggle="dropdown"><i
-                                class="glyphicon glyphicon-search"></i></a>
-                        <ul class="dropdown-menu" style="padding:12px;">
-                            <form class="form-inline">
-                                <button type="submit" class="btn btn-default pull-right"><i class="glyphicon glyphicon-search"></i></button><input
-                                    type="text" class="form-control pull-left" placeholder="Search">
-                            </form>
-                        </ul>
-                    </li>
-                </ul>
             </nav>
         </div>
     </header>
@@ -279,7 +260,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-7">
-                    <h1><%= title%>
+                    <h1>
+                        <%= title%>
                         <p class="lead"></p>
                     </h1>
                 </div>
@@ -322,8 +304,7 @@
                             <br>
                             <div class="col-md-2 col-sm-3 text-center">
                                 <a class="story-title" href="https://www.bootply.com/render/pVkM36Biz1#"><img alt=""
-                                        src="/img/58.jpg" style="width:100px;height:100px"
-                                        class="img-circle"></a>
+                                        src="/img/58.jpg" style="width:100px;height:100px" class="img-circle"></a>
                             </div>
                             <div class="col-md-10 col-sm-9">
                                 <h3>Repurpose Content to Reach a Wider Audience</h3>
@@ -347,8 +328,7 @@
                             <br>
                             <div class="col-md-2 col-sm-3 text-center">
                                 <a class="story-title" href="https://www.bootply.com/render/pVkM36Biz1#"><img alt=""
-                                        src="/img/56.jpg" style="width:100px;height:100px"
-                                        class="img-circle"></a>
+                                        src="/img/56.jpg" style="width:100px;height:100px" class="img-circle"></a>
                             </div>
                             <div class="col-md-10 col-sm-9">
                                 <h3>14 Useful Sites for Designers</h3>
@@ -372,8 +352,7 @@
                             <br>
                             <div class="col-md-2 col-sm-3 text-center">
                                 <a class="story-title" href="https://www.bootply.com/render/pVkM36Biz1#"><img alt=""
-                                        src="/img/29.jpg" style="width:100px;height:100px"
-                                        class="img-circle"></a>
+                                        src="/img/29.jpg" style="width:100px;height:100px" class="img-circle"></a>
                             </div>
                             <div class="col-md-10 col-sm-9">
                                 <h3>Measuring Your Link Building with Google Analytics</h3>
@@ -397,8 +376,7 @@
                             <br>
                             <div class="col-md-2 col-sm-3 text-center">
                                 <a class="story-title" href="https://www.bootply.com/render/pVkM36Biz1#"><img alt=""
-                                        src="/img/56.jpg" style="width:100px;height:100px"
-                                        class="img-circle"></a>
+                                        src="/img/56.jpg" style="width:100px;height:100px" class="img-circle"></a>
                             </div>
                             <div class="col-md-10 col-sm-9">
                                 <h3>Dramatically Raise the Value of Any Piece of Content with These 27 Tactics</h3>
@@ -422,8 +400,7 @@
                             <br>
                             <div class="col-md-2 col-sm-3 text-center">
                                 <a class="story-title" href="https://www.bootply.com/render/pVkM36Biz1#"><img alt=""
-                                        src="/img/29.jpg" style="width:100px;height:100px"
-                                        class="img-circle"></a>
+                                        src="/img/29.jpg" style="width:100px;height:100px" class="img-circle"></a>
                             </div>
                             <div class="col-md-10 col-sm-9">
                                 <h3>TrendPaper - What's Trending in the World</h3>
